k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: trend-app
  namespace: trend

spec:
  replicas: 2

  selector:
    matchLabels:
      app: trend-app

  template:
    metadata:
      labels:
        app: trend-app

    spec:
      containers:
        - name: trend-app
          image: anushperamaiyang/trend-app:latest

          ports:
            - containerPort: 80

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"

            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
