k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: trend-service
  namespace: trend
spec:
  type: ClusterIP
  selector:
    app: trend-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
